<resources>
    <string name="app_name">COVID-19</string>
    <string name="title_home">Home</string>
    <string name="title_dates">Dates</string>
    <string name="title_transfer">Pie</string>
    <string name="title_district">Districts</string>
    <string name="title_about">About</string>
    <string name="title_world">World Meter</string>
    <string name="title_heading">INDIAN COVID-19 TRACKER</string>
    <string name="no_internet">SORRY, NO INTERNET CONNECTION !</string>

    <string name="question1">Are you official?</string>

    <string name="answer1">No.</string>

    <string name="question2">What are your sources? How is the data gathered for this project?</string>

    <string name="answer2">We are using state bulletins and official handles to update our numbers. The data is validated by a group of volunteers and published into a Google sheet and an API. API is available for all at api.covid19india.org. We would love it if you can use this data in the fight against this virus.</string>

    <string name="question3">Why does covid19india.org have more positive count than MoHFW?</string>

    <string name="answer3">MoHFW updates the data at a scheduled time. However, we update them based on state press bulletins, official handles and reliable news channels which could be more recent.</string>

    <string name="question4">Who are you?</string>

    <string name="answer4">We are a group of dedicated volunteers who create and verify the data coming from several sources. We extract the details, like a patient relationship with other patients to identify local and community transmissions, travel history and status. We never collect or expose any personally identifiable data regarding the patients.</string>

    <string name="question5">Why are you guys putting in time and resources to do this while not gaining a single penny from it?</string>

    <string name="answer5">Because it affects all of us. Today its someone else who is getting infected tomorrow it could be us. We need to prevent the spread of this virus. We need to document the data so that people with knowledge can use this data to make informed decisions.</string>
    <string name="updates">Current Updates</string>
    <string name="help">COVID-19 News</string>
    <string name="tag_name">An Undeclared World War III</string>
    <string name="copy_right">Powered By KPTECH | &#169; 2020</string>
</resources>