<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_district"
        android:icon="@drawable/ic_casino_black_24dp"
        android:title="@string/title_district" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_graphic_eq_black_24dp"
        android:title="@string/title_transfer" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_person_pin_black_24dp"
        android:title="@string/title_about" />

</menu>
