<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <LinearLayout
        android:id="@+id/developerInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="121dp"
            android:layout_height="121dp"
            android:elevation="12dp"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"
            android:layout_gravity="center"
            android:layout_marginTop="21dp"
            android:src="@drawable/kp">

        </de.hdodenhof.circleimageview.CircleImageView>
<!--        android:text="Developed By,\n\n1. Ahana Dutta\n2. Priyanka Saha\n3. Dipisha Sarkar \n4. Sripurna Podder"-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:text="Developed By,\nMr. Koushik Paul,\nAndroid Apps Developer"
            android:textColor="#000000"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/developerInfo"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/aboutLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lato"
                android:text="@string/question1"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/lato"
                android:text="@string/answer1"
                android:textColor="#99007BFF"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lato"
                android:text="@string/question2"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/lato"
                android:text="@string/answer2"
                android:textColor="#99007BFF" />

            <com.andexert.library.RippleView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                app:rv_centered="true"
                app:rv_color="#996C757D"
                app:rv_ripplePadding="3dp"
                app:rv_type="simpleRipple">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/lato"
                    android:text="Click Here To Know More!"
                    android:textColor="#99007BFF"
                    android:textStyle="bold" />

            </com.andexert.library.RippleView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lato"
                android:text="@string/question3"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/lato"
                android:text="@string/answer3"
                android:textColor="#99007BFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lato"
                android:text="@string/question4"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/lato"
                android:text="@string/answer4"
                android:textColor="#99007BFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lato"
                android:text="@string/question5"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/lato"
                android:text="@string/answer5"
                android:textColor="#99007BFF" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>